--- a/web30/drawing.html
+++ b/web30/drawing.html
@@ -16,14 +16,14 @@
 </head>
 <section class="navbar">
     <div class="logo">
-        <h1><a href="main_page.html">Telehobbie</a></h1>
+        <h1><a href="index.html">Telehobbie</a></h1>
     </div>
     <ul>
         <li><a href="abandon_present.html">Abandoned Project</a></li>
         <li><a href="drawing.html">Arts</a></li>
         <li><a href="march.html">Marching Brand</a></li>
         <li><a href="moral.html">RCS</a></li>
-        <li><a href="about_me.html">About me</a></li>
+        <li><a href="aboutme.html">About me</a></li>
     </ul>
 </section>
 <section class="art">
@@ -33,45 +33,45 @@
     <div class="portrait">
         <div class="pop">
             <img src="chem.png" alt="">
-            <h1>lorem</h1>
-            <p><a href="draw1.html">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, voluptatem!</a></p>
+            <h1>Sleepin' Beauty.</h1>
+            <p><a href="draw1.html">ช่วงเวลานอนกลางวันที่เต็มไปด้วยความสุขและผ่อนคลายของเด็กสาวคนหนึ่ง</a></p>
         </div>
         <div class="pop">
             <img src="chem.png" alt="">
-            <h1>lorem</h1>
-            <p><a href="draw2.html">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, voluptatem!</a></p>
+            <h1>A genius little girl.</h1>
+            <p><a href="draw2.html">นักล่ารางวัลที่ทั้งเก่ง ฉลาด เต็มไปด้วยความมุ่งมั่นเพื่อเป้าหมายที่ตัวเองใฝ่ฝัน</a></p>
         </div>
         <div class="pop">
             <img src="chem.png" alt="">
-            <h1>lorem</h1>
-            <p><a href="draw3.html">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, voluptatem!</a></p>
+            <h1>A single day.</h1>
+            <p><a href="draw3.html">วันธรรมดาที่ไม่มีอะไรแตกต่างจากวันอื่นๆ แต่กลับซ่อนความพิเศษบางอย่างไว้ภายใน ชวนน่าค้นหา</a></p>
         </div>
         <div class="pop">
             <img src="chem.png" alt="">
-            <h1>lorem</h1>
-            <p><a href="draw4.html">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, voluptatem!</a></p>
+            <h1>Begging for a dance.</h1>
+            <p><a href="draw4.html">ค่ำคืนที่พิเศษกว่าครั้งไหนๆ และยากที่จะลืมเลือน ประสบการณ์ที่น้อยโอกาสนักจะมีกับ "การเต้นรำครั้งแรกและครั้งสุดท้าย"</a></p>
         </div>
     </div>
     <div class="portrait">
         <div class="pop">
             <img src="chem.png" alt="">
-            <h1>lorem</h1>
-            <p><a href="draw5.html">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, voluptatem!</a></p>
+            <h1>The last fieldwork.</h1>
+            <p><a href="draw5.html">กิจกรรมภาคสนามครั้งสุดท้ายของค่ายภูมิศาสตร์ "เหนื่อย" "ยาก" "สนุก" คือคำนิยามที่ดีที่สุด ที่จะบอกเล่าบรรยากาศของกิจกรรมครั้งนี้</a></p>
         </div>
         <div class="pop">
             <img src="chem.png" alt="">
-            <h1>lorem</h1>
-            <p><a href="draw6.html">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, voluptatem!</a></p>
+            <h1>The day before goodbye.</h1>
+            <p><a href="draw6.html">วันที่ต้องบอกลา ทุกอย่างจะกลายเป็นสิ่งที่สวยงามและน่าเศร้าในเวลาเดียวกัน มันจะเป็นช่วงเวลาไม่ครั้ง ที่น่าจดจำมากกว่าครั้งไหนๆ</a></p>
         </div>
         <div class="pop">
             <img src="chem.png" alt="">
-            <h1>lorem</h1>
-            <p><a href="draw7.html">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, voluptatem!</a></p>
+            <h1>After the test.</h1>
+            <p><a href="draw7.html">หลังจากการสอบ สมองเราจะผ่อนคลายกับทุกสิ่ง แม้ว่าในใจ จะกังวลกับผลลัพธ์ที่จะตามมามากแค่ไหน</a></p>
         </div>
         <div class="pop">
             <img src="chem.png" alt="">
-            <h1>lorem</h1>
-            <p><a href="draw8.html">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, voluptatem!</a></p>
+            <h1>An amusement show.</h1>
+            <p><a href="draw8.html">การแสดงที่สนุก บันเทิง และน่าสนใจ ทำให้ความสุขพรั่งพรูในทันทีทันใด ผู้คนรอบด้านมีอารมณ์ร่วมไปกับมัน   ปล่อยวางทุกความหนักใจไว้ข้างหลัง</a></p>
         </div>
     </div>
     </div>
