--- a/web30/march.html
+++ b/web30/march.html
@@ -16,18 +16,18 @@
 </head>
 <section class="navbar">
     <div class="logo">
-        <h1><a href="main_page.html">Telehobbie</a></h1>
+        <h1><a href="index.html">Telehobbie</a></h1>
     </div>
     <ul>
         <li><a href="abandon_present.html">Abandoned Project</a></li>
         <li><a href="drawing.html">Arts</a></li>
         <li><a href="march.html">Marching Brand</a></li>
         <li><a href="moral.html">RCS</a></li>
-        <li><a href="about_me.html">About me</a></li>
+        <li><a href="aboutme.html">About me</a></li>
     </ul>
 </section>
 <section class="banner_img">
-    <img src="march/march4.jpeg" alt="">
+    <img src="" alt="">
 </section>
 <section class="banner_title">
     <h1>" วงโยธวาทิต "</h1>
@@ -38,12 +38,12 @@
     <section class="introduce1">
         <div class="act">
             <video width="600" height="400" controls poster="march/pract6.jpeg">
-                <source src="march/visual.mp4" type="video/mp4">
+                <source src="./desktop/web/march2.jpeg" type="video/mp4">
             </video>
-            <img src="march/march7.jpg" alt="" width="200" height="133">
-            <img src="march/march3.jpg" alt="" width="200">
-            <img src="march/march.jpeg" alt="" width="200">
-            <img src="march/march13.jpg" alt="" width="200">
+            <img src="march7.jpg" alt="" width="200" height="133">
+            <img src="march3.jpg" alt="" width="200">
+            <img src="march.jpeg" alt="" width="200">
+            <img src="march13.jpg" alt="" width="200">
             <h3>ผลการแข่งขันระดับเหรียญทอง</h3>
             <h1>การแข่งขันชิงถ้วยพระราชทาน ชิงแชมป์นครชัยบุรินทร์ ณ จังหวัดชัยภูมิ</h1>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;เปลี่ยนจากการนั่งบรรเลง เป็นการเดินสวนสนาม การแข่งขันนี้ ทำให้ได้ลองอะไรใหม่ๆ อย่างเช่น การเดินแปลงภาพ ท่าเดินต่างๆ ที่นอกเหนือจากการเดินขบวนวงโยแบบปกติ ซึ่งต้องจำให้ได้ทุกรูปแบบ และต้องห้ามเดินผิด เพราะจะทำให้เสียขบวนทั้งวง การซ้อมใช้เวลาทั้งหมด 3 เดือน ในช่วงเดือนธันวาคม ถึงเดือนมีนาคม ซึ่งเป็นช่วงเวลาในการเรียนออนไลน์และคลาสเรียนเริ่มเหลือน้อยลงจากการปิดคอร์สหลายๆวิชา ทำให้มีเวลาซ้อมอย่างเต็มที่ กิจกรรมนี้เรียกได้ว่าเป็นกิจกรรมวงโยธวาทิตที่เหนื่อยที่สุดสำหรับผมแล้วและเป็นกิจกรรมที่ผมถูกคนในวงตำหนิมากที่สุด จากการเดินผิดขบวนอยู่หลายครั้ง แต่ก็คุ้มค่าที่ครั้งหนึ่งผมได้ลองทำอะไรที่แปลกใหม่และได้เรียนรู้ถึงข้อผิดพลาดของตัวเองมากขึ้น</p>
