--- a/web30/draw4.html
+++ b/web30/draw4.html
@@ -16,14 +16,14 @@
 </head>
 <section class="navbar">
     <div class="logo">
-        <h1><a href="main_page.html">Telehobbie</a></h1>
+        <h1><a href="index.html">Telehobbie</a></h1>
     </div>
     <ul>
         <li><a href="abandon_present.html">Abandoned Project</a></li>
         <li><a href="drawing.html">Arts</a></li>
         <li><a href="march.html">Marching Brand</a></li>
         <li><a href="moral.html">RCS</a></li>
-        <li><a href="about_me.html">About me</a></li>
+        <li><a href="aboutme.html">About me</a></li>
     </ul>
 </section>
 <section class="art_all">
